--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "million": "^2.4.4",
     "mysql2": "^3.3.3",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-spinners": "^0.13.8",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "tedious": "^16.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
