--- a/.github/workflows/master_myhack.yml
+++ b/.github/workflows/master_myhack.yml
@@ -1,5 +1,59 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
+# # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# # More GitHub Actions for Azure: https://github.com/Azure/actions
+
+# name: Build and deploy Node.js app to Azure Web App - myhack
+
+# on:
+#   push:
+#     branches:
+#       - master
+#   workflow_dispatch:
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - uses: actions/checkout@v2
+
+#       - name: Set up Node.js version
+#         uses: actions/setup-node@v1
+#         with:
+#           node-version: '18.x'
+
+#       - name: npm install, build, and test
+#         run: |
+#           npm install
+#           npm run build --if-present
+#           npm run test --if-present
+
+#       - name: Upload artifact for deployment job
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: node-app
+#           path: .
+
+#   deploy:
+#     runs-on: ubuntu-latest
+#     needs: build
+#     environment:
+#       name: 'Production'
+#       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+#     steps:
+#       - name: Download artifact from build job
+#         uses: actions/download-artifact@v2
+#         with:
+#           name: node-app
+
+#       - name: 'Deploy to Azure Web App'
+#         id: deploy-to-webapp
+#         uses: azure/webapps-deploy@v2
+#         with:
+#           app-name: 'myhack'
+#           slot-name: 'Production'
+#           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F01288008C3C4398BCC015ADEC1A750A }}
+#           package: .
 
 name: Build and deploy Node.js app to Azure Web App - myhack
 
@@ -20,6 +74,19 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '18.x'
+
+      - name: Check for changes
+        id: changes
+        uses: actions/github-script@v4
+        with:
+          script: |
+            const compare = await github.repos.compareCommits({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              base: 'HEAD~1',
+              head: context.sha
+            });
+            core.setOutput('hasChanges', compare.data.files.length > 0);
 
       - name: npm install, build, and test
         run: |
@@ -46,6 +113,10 @@ jobs:
         with:
           name: node-app
 
+      - name: Check if changes exist
+        id: check-changes
+        run: echo "Changes exist: ${{ needs.build.outputs.hasChanges }}"
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
@@ -54,3 +125,21 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F01288008C3C4398BCC015ADEC1A750A }}
           package: .
+        if: ${{ needs.build.outputs.hasChanges == 'true' }}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
