--- a/.github/workflows/master_myhack.yml
+++ b/.github/workflows/master_myhack.yml
@@ -51,10 +51,10 @@ jobs:
         with:
           path: ~/.npm
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: node-app
+#       - name: Download artifact from build job
+#         uses: actions/download-artifact@v2
+#         with:
+#           name: node-app
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
